python_by_immersion/ex-tuples_lists
╭─evaldes@B0-MBA.local ~
╰─➤  python3
Python 3.4.3 (default, Apr  9 2015, 08:02:15)
[GCC 4.2.1 Compatible Apple LLVM 6.0 (clang-600.0.57)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> m = [1, 2, 3]
>>> m
[1, 2, 3]
>>> m += 'd'
>>> m
[1, 2, 3, 'd']
>>> m.append('e')
>>> m
[1, 2, 3, 'd', 'e']
>>> m.append(5, 5, 6, 6, 7)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: append() takes exactly one argument (5 given)
>>> m.append([5, 5, 6, 6, 7])
>>> m
[1, 2, 3, 'd', 'e', [5, 5, 6, 6, 7]]
>>> del m[-1]
>>> m
[1, 2, 3, 'd', 'e']
>>> m
[1, 2, 3, 'd', 'e']
>>> m.extend([5, 5, 6, 6, 7])
>>> m
[1, 2, 3, 'd', 'e', 5, 5, 6, 6, 7]
>>> 5 in m
True
>>> 10 in m
False
>>> no 10 in m
  File "<stdin>", line 1
    no 10 in m
        ^
SyntaxError: invalid syntax
>>> 10 not in m
True
>>> [5, 6] in m
False
>>> m
[1, 2, 3, 'd', 'e', 5, 5, 6, 6, 7]
>>> m.append([5, 6])
>>> m
[1, 2, 3, 'd', 'e', 5, 5, 6, 6, 7, [5, 6]]
>>> [5, 6] in m
True
>>> n = [1, 2, 4]
>>> m < n
True
>>> i, j = 1, 2
>>> i, j
(1, 2)
>>> i, j = j, i
>>> i, j
(2, 1)
>>>